Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbtlife5 {
    long    dummy ; 
    long    type ;  
    long    data ;  
} ODBTLIFE5 ;
typedef struct iodbtd2 {
    short   datano;     
    short   dummy;      
    long    type;       
    long    tool_num;   
    long    h_code;     
    long    d_code;     
    long    tool_inf;   
} IODBTD2;
typedef struct odbhis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    union {
        struct {
            short   rec_type;   
            short   alm_grp;    
            short   alm_no;     
            char    axis_no;    
            char    dummy;
        } rec_alm;
        struct {
            short   rec_type;   
            char    key_code;   
            char    pw_flag;    
            char    dummy[4];
        } rec_mdi;
        struct {
            short   rec_type;   
            char    sig_name;   
            char    sig_old;    
            char    sig_new;    
            char    dummy;
            short   sig_no;     
        } rec_sgn;
        struct {
            short   rec_type;   
            char    year;       
            char    month;      
            char    day;        
            char    pw_flag;    
            char    dummy[2];
        } rec_date;
        struct {
            short   rec_type;   
            char    hour;       
            char    minute;     
            char    second;     
            char    pw_flag;    
            char    dummy[2];
        } rec_time;
    } data[10];
} ODBHIS;   
typedef struct odbahis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    struct {
        short   dummy;
        short   alm_grp;        
        short   alm_no;         
        char    axis_no;        
        char    year;           
        char    month;          
        char    day;            
        char    hour;           
        char    minute;         
        char    second;         
        char    dummy2;
        short   len_msg;        
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS;  
typedef struct odbahis2 {
    unsigned short  s_no;   
    unsigned short  e_no;   
    struct {
        short   alm_grp;        
        short   alm_no;         
        short   axis_no;        
        short   year;           
        short   month;          
        short   day;            
        short   hour;           
        short   minute;         
        short   second;         
        short   len_msg;        
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS2;  
typedef struct iodbsig {
    short   datano; 
    short   type;   
    struct {
        short   ent_no;     
        short   sig_no;     
        char    sig_name;   
        char    mask_pat;   
    } data[20];
} IODBSIG;  
typedef struct odbdsdir {
    long    file_num ;
    long    remainder ;
    short   data_num ;
    struct {
        char    file_name[16] ;
        char    comment[64] ;
        long    size ;
        char    date[16] ;
    } data[32] ;
} ODBDSDIR ;
typedef struct iodbdsset {
	char host_ip[16] ;
	char host_uname[32] ;
	char host_passwd[32] ;
	char host_dir[128] ;
	char dtsv_mac[13] ;
	char dtsv_ip[16] ;
	char dtsv_mask[16] ;
} IODBDSSET ;
typedef struct odbdsmnt {
	long empty_cnt ;
	long total_size ;
	long read_ptr ;
	long write_ptr ;
} ODBDSMNT ;
typedef struct odbpser {
    long    poserr1 ;
    long    poserr2 ;
} ODBPSER ;
typedef struct odbspdi {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDI ;
typedef struct odbspdo {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDO ;
typedef struct iodbwave {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   delay ;
    short   t_range ;
    struct {
        short   kind ;
        union {
#if MAX_AXIS > 16
            long        axis ;
#else
            short       axis ;
#endif
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
    } ch[12] ;
} IODBWAVE ;
typedef struct iodbwvprm {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   reserve1 ;
    long    delay ;
    long    t_range ;
    struct {
        short   kind ;
        union {
            long    axis ;
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
        long    reserve2 ;
    } ch[12] ;
} IODBWVPRM ;
typedef struct odbwvdt {
    short   channel ;
    short   kind ;
    union {
        short   axis ;
        struct {
            char    adr ;
            char    bit ;
            short   no ;
        } io ;
    } u ;
    char    year ;
    char    month ;
    char    day ;
    char    hour ;
    char    minute ;
    char    second ;
    short   t_cycle ;
    short   data[8192] ;
} ODBWVDT ;
typedef struct iodbcprm {
	char           NcApli[65] ;
	char           Dummy1 ;
	char           HostApli[65] ;
	char           Dummy2 ;
	unsigned long  StatPstv ;
	unsigned long  StatNgtv ;
	unsigned long  Statmask ;
	unsigned long  AlarmStat ;
	unsigned long  PsclHaddr ;
	unsigned long  PsclLaddr ;
	unsigned short SvcMode1 ;
	unsigned short SvcMode2 ;
	long           FileTout ;
	long           RemTout ;
} IODBCPRM ;
typedef struct odbomif {
	unsigned short	om_max ;   
	unsigned short	om_sum ;   
	unsigned short	om_char ;  
} ODBOMIF ;
typedef struct odbomhis {
	short	om_no;	
	short	year;	
	short	month;	
	short	day;	
	short	hour;	
	short	minute;	
	short	second;	
	char	om_msg[256];	
} ODBOMHIS ;
typedef struct iodbtlctl {
	short	slct;
	short	used_tool;
	short	turret_indx;
	long	zero_tl_no;
	long	t_axis_move;
	long	total_punch[2];
    char    t_axis_dec;
    char    reserve;
    short   reserves[10];
} IODBTLCTL ;
typedef struct iodbtldt {
	short	slct;
	long	tool_no;
	long	x_axis_ofs;
	long	y_axis_ofs;
	long	turret_pos;
	long	chg_tl_no;
	long	punch_count;
	long	tool_life;
	long	m_tl_radius;
	long	m_tl_angle;
	char	tl_shape;
	long	tl_size_i;
	long	tl_size_j;
	long	tl_angle;
    char    x_axis_dec;
    char    y_axis_dec;
    char    turret_dec;
    char    m_radius_dec;
    char    m_angle_dec;
    char    tl_size_i_dec;
    char    tl_size_j_dec;
    char    tl_angle_dec;
    short   reserve[2];
} IODBTLDT ;
typedef struct iodbmlttl {
	short	slct;
	short	m_tl_no;
	long	m_tl_radius;
	long	m_tl_angle;
	long	x_axis_ofs;
	long	y_axis_ofs;
	char	tl_shape;
	long	tl_size_i;
	long	tl_size_j;
	long	tl_angle;
    char    m_radius_dec;
    char    m_angle_dec;
    char    x_axis_dec;
    char    y_axis_dec; 
    char    tl_size_i_dec;
    char    tl_size_j_dec;
    char    tl_angle_dec; 
    char    reserve; 
    long    reserves[5];
} IODBMLTTL ;
typedef struct iodbsafe {
	short	slct;
	long	data[3];
} IODBSAFE ;
typedef struct iodbtlzn {
	short	slct;
	long	data[2];
} IODBTLZN ;
typedef struct odbacttlzn {
	short	act_no;
	long	data[2];
} ODBACTTLZN ;
typedef struct odbaxisname {
    char name;          
    char suff;          
} ODBAXISNAME ;
typedef struct odbspdlname {
    char name;          
    char suff1;         
    char suff2;         
    char suff3;         
} ODBSPDLNAME ;
FWLIBAPI short WINAPI cnc_clrcntinfo( unsigned short, short, short ) ;
FWLIBAPI short WINAPI cnc_rdgrpid2( unsigned short, long, ODBTLIFE5 * ) ;
FWLIBAPI short WINAPI cnc_rd1tlifedat2( unsigned short, short, long, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_wr1tlifedat2( unsigned short, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_stopophis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_startophis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdophisno( unsigned short, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_rdophistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBHIS * ) ;
FWLIBAPI short WINAPI cnc_rdophistry2( unsigned short, unsigned short, unsigned short *, unsigned short *, void * ) ;
FWLIBAPI short WINAPI cnc_rdalmhisno( unsigned short, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_rdalmhistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS * ) ;
FWLIBAPI short WINAPI cnc_rdalmhistry2( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS2 * ) ;
FWLIBAPI short WINAPI cnc_clearophis( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_wrhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpget( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpput( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdpgdir( unsigned short, char *, short, ODBDSDIR * ) ;
FWLIBAPI short WINAPI cnc_dtsvdelete( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvdownload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvupload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvcnclupdn( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvupdnstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvgetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvrdset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvwrset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvchkdsk( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvhdformat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvsavecram( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdcram( unsigned short, long, long *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvmntinfo( unsigned short, ODBDSMNT * ) ;
FWLIBAPI short WINAPI cnc_dtsvgetmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetmode( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_dtsvrderrmsg( unsigned short, short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvwrfile( unsigned short, char *, char *,short );
FWLIBAPI short WINAPI cnc_dtsvrdfile( unsigned short, char *, char *,short );
FWLIBAPI short WINAPI cnc_rdloopgain( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsrvspeed( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdopmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs2( unsigned short, ODBPSER * ) ;
FWLIBAPI short WINAPI cnc_rdposerrz( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrsy( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrrg( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdspdlalm( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdctrldi( unsigned short, ODBSPDI * ) ;
FWLIBAPI short WINAPI cnc_rdctrldo( unsigned short, ODBSPDO * ) ;
FWLIBAPI short WINAPI cnc_rdnspdl( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_wrfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wavestart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestop( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestat( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwavedata( unsigned short, short, short, long, long *, ODBWVDT * ) ;
FWLIBAPI short WINAPI cnc_rddncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_wrdncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_wrcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_rdcomlogmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomopemsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdrcvmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdsndmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_sendmessage( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_clrmsgbuff( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdrcvstat( unsigned short, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_stopomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_startomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdomhisinfo( unsigned short, ODBOMIF * ) ;
FWLIBAPI short WINAPI cnc_rdomhistry( unsigned short, unsigned short, unsigned short *, ODBOMHIS * ) ;
FWLIBAPI short WINAPI cnc_clearomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdtlctldata( unsigned short, IODBTLCTL * ) ;
FWLIBAPI short WINAPI cnc_wrtlctldata( unsigned short, IODBTLCTL * ) ;
FWLIBAPI short WINAPI cnc_rdtooldata( unsigned short, short, short *, IODBTLDT * ) ;
FWLIBAPI short WINAPI cnc_wrtooldata( unsigned short, short, short *, IODBTLDT * ) ;
FWLIBAPI short WINAPI cnc_rdmultitldt( unsigned short, short, short *, IODBMLTTL * ) ;
FWLIBAPI short WINAPI cnc_wrmultitldt( unsigned short, short, short *, IODBMLTTL * ) ;
FWLIBAPI short WINAPI cnc_rdsafetyzone( unsigned short, short, short *, IODBSAFE * ) ;
FWLIBAPI short WINAPI cnc_wrsafetyzone( unsigned short, short, short *, IODBSAFE * ) ;
FWLIBAPI short WINAPI cnc_rdtoolzone( unsigned short, short, short *, IODBTLZN * ) ;
FWLIBAPI short WINAPI cnc_wrtoolzone( unsigned short, short, short *, IODBTLZN * ) ;
FWLIBAPI short WINAPI cnc_rdacttlzone( unsigned short, ODBACTTLZN * ) ;
FWLIBAPI short WINAPI cnc_rdsetzone( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_wrsetzone( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdaxisname( unsigned short, short *, ODBAXISNAME *);
FWLIBAPI short WINAPI cnc_rdspdlname( unsigned short, short *, ODBSPDLNAME *);