Agent - fanuc iSeries/Fwlib/15i/Fwlib32.bas


' clear tool life management data(tool life counter, tool information)(area specified)
Declare Function cnc_clrcntinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b% )

' read tool life management data(tool group number) 2
Declare Function cnc_rdgrpid2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, Odb As ODBTLIFE5)

' read tool life management data(tool data1) 2
Declare Function cnc_rd1tlifedat2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b&, Odb As IODBTD2)

' write tool life management data(tool data1) 2
Declare Function cnc_wr1tlifedat2% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBTD2)


'-------------------------------------
' CNC: Operation history data related
'-------------------------------------

' stop logging operation history data
Declare Function cnc_stopophis% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' restart logging operation history data
Declare Function cnc_startophis% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read number of operation history data
Declare Function cnc_rdophisno% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read operation history data
Declare Function cnc_rdophistry% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As Any )

' read operation history data
Declare Function cnc_rdophistry2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, b&, c&, Odb As Any )

' read number of alarm history data
Declare Function cnc_rdalmhisno% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read alarm history data
Declare Function cnc_rdalmhistry% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As ODBAHIS )

' read alarm history data
Declare Function cnc_rdalmhistry2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b&, ByVal c&, Odb As ODBAHIS2 )

' clear operation history data
Declare Function cnc_clearophis% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read signals related operation history
Declare Function cnc_rdhissgnl% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBSIG )

' write signals related operation history
Declare Function cnc_wrhissgnl% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBSIG )
' stop the sampling for operator message history
Declare Function cnc_stopomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start the sampling for operator message history
Declare Function cnc_startomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read operator message history information
Declare Function cnc_rdomhisinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBOMIF)

' read operator message history
Declare Function cnc_rdomhistry% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b&, Odb As ODBOMHIS)

' clear operator message history
Declare Function cnc_clearomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)


'----------------------------
' CNC: Servo/spindle related
'----------------------------

' read the loop gain for each axis
Declare Function cnc_rdloopgain% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the actual current for each axis
Declare Function cnc_rdcurrent% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the actual speed for each axis
Declare Function cnc_rdsrvspeed% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the number of controled spindle
Declare Function cnc_rdnspdl% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the operation mode
Declare Function cnc_rdopmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the position deviation S
Declare Function cnc_rdposerrs% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the position deviation S1 and S2
Declare Function cnc_rdposerrs2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPSER )

' read the position deviation Z in the rigid tap mode
Declare Function cnc_rdposerrz% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the synchronous error in the synchronous control mode
Declare Function cnc_rdsynerrsy% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the synchronous error in the rigid tap mode
Declare Function cnc_rdsynerrrg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the spindle alarm
Declare Function cnc_rdspdlalm% Lib "fwlib32.dll" ( ByVal FlibHndl%, a as Byte )

' read the control input signal
Declare Function cnc_rdctrldi% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSPDI )

' read the control output signal
Declare Function cnc_rdctrldo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSPDO )

' read the parameter of wave diagnosis
Declare Function cnc_rdwaveprm% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As Any )

' write the parameter of wave diagnosis
Declare Function cnc_wrwaveprm% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As Any )

' read the parameter of wave diagnosis 2
Declare Function cnc_rdwaveprm2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBWVPRM )

' write the parameter of wave diagnosis 2
Declare Function cnc_wrwaveprm2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBWVPRM )

' start the sampling for wave diagnosis
Declare Function cnc_wavestart% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' stop the sampling for wave diagnosis
Declare Function cnc_wavestop% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read the status of wave diagnosis
Declare Function cnc_wavestat% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the data of wave diagnosis
Declare Function cnc_rdwavedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, d&, Odb As Any )


'----------------------------------------------------
' CNC: Data Server, DNC1, DNC2, OSI-Ethernet related
'----------------------------------------------------

' transfer file from host to data server
Declare Function cnc_dtsvftpget% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b$ )

' transfer file from data server to host
Declare Function cnc_dtsvftpput% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b$ )

' read transfer file status both host and data server
Declare Function cnc_dtsvftpstat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read directory in data server
Declare Function cnc_dtsvrdpgdir% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b%, Odb As ODBDSDIR )

' delete file in data server
Declare Function cnc_dtsvdelete% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' download from data server to cnc
Declare Function cnc_dtsvdownload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' upload from cnc to data server
Declare Function cnc_dtsvupload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' cancel upload/download both data server and cnc
Declare Function cnc_dtsvcnclupdn% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read upload/download status both data server and cnc
Declare Function cnc_dtsvupdnstat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read file name for data server dnc
Declare Function cnc_dtsvgetdncpg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' write file name for data server dnc
Declare Function cnc_dtsvsetdncpg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' read setting data for data server
Declare Function cnc_dtsvrdset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBDSSET )

' write setting data for data server
Declare Function cnc_dtsvwrset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBDSSET )

' check hard disk for data server
Declare Function cnc_dtsvchkdsk% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' format hard disk for data server
Declare Function cnc_dtsvhdformat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' write interface area for data server
Declare Function cnc_dtsvsavecram% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read  interface area for data server
Declare Function cnc_dtsvrdcram% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, b&, c as Byte )

' read maintanance information for data server
Declare Function cnc_dtsvmntinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBDSMNT )

' read data server mode
Declare Function cnc_dtsvgetmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' change data server mode
Declare Function cnc_dtsvsetmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read error message for data server
Declare Function cnc_dtsvrderrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b$ )

' transfar file from PC to Data Server
Declare Function cnc_dtsvwrfile% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$, ByVal c%)

' transfar file from Data Server to PC
Declare Function cnc_dtsvrdfile% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$, ByVal c%)

' read DNC file name for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_rddncfname% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' write DNC file name for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_wrdncfname% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' read communication parameter for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_rdcomparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBCPRM )

' write communication parameter for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_wrcomparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBCPRM )

' read log message for DNC2
Declare Function cnc_rdcomlogmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read operater message for DNC1 and DNC2
Declare Function cnc_rdcomopemsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read receive message for OSI-Ethernet
Declare Function cnc_rdrcvmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read send message for OSI-Ethernet
Declare Function cnc_rdsndmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' sending message for OSI-Ethernet
Declare Function cnc_sendmessage% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' clear message buffer for OSI-Ethernet
Declare Function cnc_clrmsgbuff% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read receive message status for OSI-Ethernet
Declare Function cnc_rdrcvstat% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read data from FANUC BUS
Declare Function cnc_rdfbusmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any )

' write data to FANUC BUS
Declare Function cnc_wrfbusmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any )


'--------------------------
' CNC: PUNCH PRESS related
'--------------------------

' read tool controll data
Declare Function cnc_rdtlctldata% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As IODBTLCTL)

' write tool controll data
Declare Function cnc_wrtlctldata% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBTLCTL)

' read tool data
Declare Function cnc_rdtooldata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As IODBTLDT)

' read tool data
Declare Function cnc_wrtooldata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Idb As IODBTLDT)

' read multi tool data
Declare Function cnc_rdmultitldt% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As IODBMLTTL)

' write multi tool data
Declare Function cnc_wrmultitldt% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Idb As IODBMLTTL)

' read safetyzone data
Declare Function cnc_rdsafetyzone% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As IODBSAFE)

' write safetyzone data
Declare Function cnc_wrsafetyzone% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Idb As IODBSAFE)

' read toolzone data
Declare Function cnc_rdtoolzone% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As IODBTLZN)

' write toolzone data
Declare Function cnc_wrtoolzone% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Idb As IODBTLZN)

' read active toolzone data
Declare Function cnc_rdacttlzone% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBACTTLZN)

' read setzone number
Declare Function cnc_rdsetzone% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' write setzone number
Declare Function cnc_wrsetzone% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' read axis name CNC
Declare Function cnc_rdaxisname% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, Odb As ODBAXISNAME)

' read spindle name
Declare Function cnc_rdspdlname% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, Odb As ODBSPDLNAME)


'--------------------
' CNC: LASER related
'--------------------
